# sx_phot

./: .gitignore  AGENTS.md  README.md  pyproject.toml
drivers/: README.txt  add_sxdeep_flag.py  animate_tic_cutouts.py  circphot.py  circphot_slow.py  circphot_zoom.py  get_tic_spherex_coords.py  plot_inout_spectrum.py  plot_phase_bin_band_residuals.py  plot_phase_residuals.py  plot_phase_spectrum.py  run_circphot.py  run_cpvs.py  run_known_planets.py  run_known_planets_50pc.py  run_resolved_disks.py  run_tic_circphot.py  run_tuc-hor.py  simplephot_slowest.py
drivers/data/: resolved_disks_extracted.csv
scripts/: README.txt  add_spherex_obs_flag.py  get_random_EBs.py  get_spherex.sh  launch_jan8_tars_deep.py  plot_tess_spherex_overlap.py  replot_phase_resid.sh  run_get_spherex_daily.sh  run_random_ebs_pipeline.py  run_ticid_with_period.py  simplephot_slow.py
sx_phot/: circphot.py  cutout_animation.py  mp_circphot.py  splinefit.py  sx_pointing.py  tic_motion.py  visualization.py
tests/: conftest.py  test_splinefit.py  test_sx_pointing.py  test_tic_motion.py  test_visualization.py
