[project]
name = "sx-phot"
version = "0.1.0"
description = "Simple SPHEREx circular-aperture photometry utilities"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Proprietary"}
authors = [{name = "Luke"}]
dependencies = [
  "numpy",
  "pandas",
  "astropy",
  "photutils",
  "matplotlib",
  "pyvo",
  "requests",
  "aesthetic"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-mock"]

[project.urls]
homepage = "https://github.com/lgbouma/sx_phot"

[tool.pytest.ini_options]
addopts = "-q"
python_files = ["test_*.py", "*_test.py"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sx_phot"]
